--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>teamproject</title>
-    <meta name="description" content="Description for teamproject" />
+    <title>MoneyMavem</title>
+    <meta
+      name="description"
+      content="ManeyMaven is a is a digital tool that allows individuals or businesses to manage their finances by keeping track of their expenses and income in one central location"
+    />
     <meta name="google" content="notranslate" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
     <base href="/" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="favicon.ico" sizes="32x32" />
     <link rel="manifest" href="manifest.webapp" />
     <link rel="stylesheet" href="content/css/loading.css" />
     <!-- jhipster-needle-add-resources-to-root - JHipster will add new resources here -->
