Revert "Merge branch 'master' of git.cs.bham.ac.uk:team-projects-2022-23/team43-22"
This reverts commit 8bd5d152bfedc27bc085302bab0c02899c5983e8

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,7 +24,7 @@
         your experience.
       </p>
     <![endif]-->
-    <jhi-main style="margin: 0; padding: 0; height: 100%; width: 100%">
+    <jhi-main style="margin: 0; padding: 0">
       <div class="app-loading" style="margin: 0; padding: 0">
         <div class="lds-pacman"></div>
         <div class="app-loading">
